corrección para permitir acceso a la carpeta de imagenes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Esta página es un clon de la página principal de google">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.cdnfonts.com/css/google-sans" rel="stylesheet">
-    <link rel="shortcut icon" href="./imágenes/pngwing.com (2).png" type="img">
+    <link rel="shortcut icon" href="./imagenes/pngwing.com (2).png" type="img">
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js"></script>
 
@@ -18,14 +18,14 @@
         <nav>
             <div class="nav-text">
                 <a href="" class="gmail-txt">Gmail</a>
-                <a href="">Imágenes</a>    
+                <a href="">Imagenes</a>    
             </div>
             <div class="nav-imgs">
                 <div class="menu-button-background">
-                    <img src="./imágenes/menu-svgrepo-com.svg" alt="google apps" class="menu-button">
+                    <img src="./imagenes/menu-svgrepo-com.svg" alt="google apps" class="menu-button">
                 </div>
                 <div class="photo-background">
-                    <img src="./imágenes/306743489_1578350682621618_2988293414226019433_n.jpg" alt="Foto de perfil" class="profil-picture">
+                    <img src="./imagenes/306743489_1578350682621618_2988293414226019433_n.jpg" alt="Foto de perfil" class="profil-picture">
                 </div>
             </div>
         </nav>
