--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="contenedores-recientes">
                 <div class="fondo-recientes">
-                    <img src="./imágenes/pngwing.com (1).png" alt="" class="logo-acceso-directo">
+                    <img src="./imagenes/pngwing.com (1).png" alt="" class="logo-acceso-directo">
                 </div>
                 <div class="contenedor-titulo">
                     <p>Agrega acceso directo</p>
