Links agregados a gmail e imágenes

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <header>
         <nav>
             <div class="nav-text">
-                <a href="" class="gmail-txt">Gmail</a>
-                <a href="">Imagenes</a>    
+                <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox" class="gmail-txt">Gmail</a>
+                <a href="https://www.google.com.co/imghp?hl=es-419&tab=ri&authuser=0&ogbl">Imagenes</a>    
             </div>
             <div class="nav-imgs">
                 <div class="menu-button-background">
